--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "coverage": "nyc --reporter=html mocha test/ --recursive"
   },
   "devDependencies": {
     "chai": "^4.1.2"
